--- a/index.css
+++ b/index.css
@@ -46,6 +46,9 @@
 		text-indent: 2em;
 		text-align: center;
 	}
+	.tip-img{
+		height: 24px;
+	}
 	.title-bj{
 		width: 420px;
 		height: 50px;
@@ -170,7 +173,36 @@
 		height: 240px;
 		border: none;
 		margin: 0px;
+		margin-top: 5px;
 		padding: 0px;
+	}
+	#friendship{
+		width: 100%;
+	}
+	.yqontent{
+		width: 80%;
+		margin: auto;
+		text-align: center;
+		padding: 20px 0px;
+	}
+	.yqontent li{
+		box-sizing: content-box;
+		list-style: none;
+		display: inline-block;
+		padding: 6px 15px;
+		background: #f5f5f5;
+		height: 30px;
+		line-height: 30px;
+		margin: 5px;
+	}
+	.yqontent li a{
+		color: #333;
+	}
+	.yqontent li:hover{
+		background: orangered;
+	}
+	.yqontent li:hover a{
+		color: #fff;
 	}
 	.my-footer{
 		background: black;
@@ -194,6 +226,7 @@
 	}
 	.left-footer img{
 		width: 20px;
+		margin-top: -5px;
 	}
 	.right-footer{
 		float: right;
@@ -354,6 +387,34 @@
 		border: none;
 		margin: 0px;
 		padding: 0px;
+	}
+	#friendship{
+		width: 100%;
+	}
+	.yqontent{
+		width: 100%;
+		margin: auto;
+		text-align: center;
+		padding: 20px 0px;
+	}
+	.yqontent li{
+		box-sizing: content-box;
+		list-style: none;
+		display: inline-block;
+		padding: 6px 15px;
+		background: #f5f5f5;
+		height: 30px;
+		line-height: 30px;
+		margin: 5px;
+	}
+	.yqontent li a{
+		color: #333;
+	}
+	.yqontent li:hover{
+		background: orangered;
+	}
+	.yqontent li:hover a{
+		color: #fff;
 	}
 	.my-footer{
 		background: black;
