--- a/index.css
+++ b/index.css
@@ -48,6 +48,7 @@
 	}
 	.tip-img{
 		height: 24px;
+		margin-left: 10px;
 	}
 	.title-bj{
 		width: 420px;
@@ -178,6 +179,26 @@
 	}
 	#friendship{
 		width: 100%;
+	}
+	#news li{
+		width: 80%;
+		height: 50px;
+		line-height: 50px;
+		margin: auto;	
+		list-style: none;
+		border-bottom: 1px dashed #ccc;
+	}
+	#newsList{
+		padding: 20px 0px;
+	}
+	.newsTime,.newsTitle{
+		display: inline-block;
+	}
+	.newsTitle{
+		float: left;
+	}
+	.newsTime{
+		float: right;
 	}
 	.yqontent{
 		width: 80%;
@@ -327,11 +348,11 @@
 		margin: auto;
 	}
 	#business li{
-		margin: 20px;
+		margin: 10px;
 		list-style: none;
 		display: inline-block;
-		width: 150px;
-		height: 150px;
+		width: 120px;
+		height: 120px;
 		background: #f5f5f5;
 		vertical-align: top;
 		position: relative;
@@ -388,8 +409,33 @@
 		margin: 0px;
 		padding: 0px;
 	}
+	#new{
+		padding: 80px 0px;
+	}
+	#news li{
+		width: 80%;
+		line-height: 30px;
+		margin: auto;	
+		list-style: none;
+	}
+	#newsList{
+		padding: 20px 0px;
+	}
+	.newsTime,.newsTitle{
+		display: inline-block;
+	}
+	.newsTitle{
+		display: inline-block;
+		text-align: left;
+	}
+	.newsTime{
+		display: inline-block;
+		text-align: right;
+		width: 100%;
+	}
 	#friendship{
 		width: 100%;
+		background: #f5f5f5;
 	}
 	.yqontent{
 		width: 100%;
@@ -402,7 +448,7 @@
 		list-style: none;
 		display: inline-block;
 		padding: 6px 15px;
-		background: #f5f5f5;
+		background: #fff;
 		height: 30px;
 		line-height: 30px;
 		margin: 5px;
