--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@
 		margin: auto;
 		line-height: 30px;
 		text-indent: 2em;
-		text-align: center;
+		text-align: left;
 	}
 	.tip-img{
 		height: 24px;
