--- a/product.css
+++ b/product.css
@@ -1,53 +1,284 @@
-.pageTitle{
-    width: 100%;
-    height: 160px;
-    background: rgb(20, 30, 87);
-    padding: 20px;
-    color: #fff;
-    line-height: 140px;
-    font-size: 36px;
-    text-indent: 4em;
-}
-.productContent{
-    width: 80%;
-    height: 500px;
-    margin: 40px 10%;
-    padding: 20px;
-    border: 1px solid #ccc;
-}
-.productLeft{
-    width: 70%;
-    float: left;
-}
-.productRight{
-    width: 30%;
-    float: left;
-}
-.productRight img{
-    margin-top: 30px;
-}
-.productLeft h2{
-    font-family: '微软雅黑';
-    font-size: 28px;
-    font-weight: 700;
-}
-.productLeft p{
-    padding-right: 40px;
-    font-size: 12px;
-    line-height: 30px;
-}
-.connectNow{
-    padding:8px 50px;
-    display: inline-block;
-    color: #fff;
-    background-color: rgb(10, 173, 10);
-}
+@media (min-width: 768px){
+    .pageTitle{
+        width: 100%;
+        height: 160px;
+        background: rgb(20, 30, 87);
+        padding: 20px;
+        color: #fff;
+        line-height: 140px;
+        font-size: 36px;
+        text-indent: 4em;
+    }
+    .productContent{
+        width: 80%;
+        height: auto;
+        margin: 40px 10%;
+        padding: 20px;
+        border: 1px solid #ccc;
+    }
+    .productLeft{
+        width: 70%;
+        float: left;
+    }
+    .productRight{
+        width: 30%;
+        float: left;
+    }
+    .productRight img{
+        margin-top: 30px;
+    }
+    .productLeft h2{
+        font-family: '微软雅黑';
+        font-size: 28px;
+        font-weight: 700;
+    }
+    .productLeft p{
+        padding-right: 40px;
+        font-size: 12px;
+        line-height: 30px;
+    }
+    .connectNow{
+        padding:8px 50px;
+        display: inline-block;
+        color: #fff;
+        background-color: rgb(10, 173, 10);
+    }
+    .cpPic{
+        clear: both;
+    }
+    .cpPic img{
+        height: 180px;
+        display: inline-block;
+        margin:auto;
+        margin:10px 10px 0px 0px;
+    }
+    .productDetail{
+        margin-top: 20px;
+        /* padding: 6px 15px; */
+    }
+    .detailType{
+        color: #333!important;
+        display: inline-block;
+        width: 100px;
+        text-align: center;
+        list-style: none;
+        height: 40px;
+        line-height: 40px;
+        border-right: 1px solid #eee;
+    }
+    .activeDetailType{
+        background: #f2f2f2;
+        color: green!important;
+    }
+    .detailType:hover{
+        color: green!important;
+    }
+    .detailContent{
+        border: 1px solid #eee;
+        width: 100%;
+        height: auto;
+        padding: 10px;
 
+    }
+    #yewufanwei,#anlijieshao{
+        width: 100%;
+        height: auto;
+    }
+    #anlijieshao{
+        margin-top: 50px;
+    }
+    #yewufanwei .myTitle,#anlijieshao .myTitle{
+        height: 40px;
+        line-height: 40px;
+        color: #000;
+        font-weight: 700;
+        font-size: 18px;
+    }
+    .rectangle{
+        display: inline-block;
+        width: 8px;
+        height: 8px;
+        box-sizing: border-box;
+        border: 8px solid transparent;
+        border-left: 8px solid green;
+        margin-top: 2px;
+        margin-right: 15px;
+    }
+    #yewufanwei li,#anlijieshao li{
+        list-style: none;
+        height: 36px;
+        line-height: 36px;
+    }
+    .anliItem{
+        margin-bottom: 20px;
+    }
+    .leftAnliContent{
+        width: 30%;
+        display: inline-block;
+        vertical-align: middle;
+        box-sizing: border-box;
+    }
+
+    .rightAnliContent{
+        width: 68%;
+        display: inline-block;
+        vertical-align: middle;
+        padding: 10px;
+        box-sizing: border-box;
+        line-height: 24px;
+    }
+    .rightAnliContent .xmTitle{
+        color: #999;
+    }
+    .titleNr{
+        color: #333;
+        font-weight: 700;
+    }
+    .hxyyd{
+        margin-top: 20px;
+    }
+}
 @media (max-width: 768px){
+    .pageTitle{
+        width: 100%;
+        height: 100px;
+        background: rgb(20, 30, 87);
+        color: #fff;
+        line-height: 100px;
+        text-align: center;
+        font-size: 36px;
+    }
+    .productContent{
+        width: 80%;
+        height: auto;
+        margin: 40px 10%;
+        padding: 20px;
+        border: 1px solid #ccc;
+    }
+    
+    .productLeft h2{
+        font-family: '微软雅黑';
+        font-size: 28px;
+        font-weight: 700;
+    }
+    .productLeft p{
+        padding-right: 40px;
+        font-size: 12px;
+        line-height: 30px;
+    }
+    .connectNow{
+        padding:8px 50px;
+        display: inline-block;
+        color: #fff;
+        background-color: rgb(10, 173, 10);
+    }
+    .cpPic{
+        clear: both;
+    }
     .productLeft{
         width: 100%;
     }
     .productRight{
         width: 100%;
+    }
+    .productRight img{
+        margin-top: 10px;
+    }
+    .connectNow{
+        padding:8px 10px;
+        display: inline-block;
+        color: #fff;
+        background-color: rgb(10, 173, 10);
+    }
+    .cpPic{
+        display: block;
+        height: auto;
+        width: 100%;
+    }
+    .cpPic img{
+        width: 80%;
+        margin:auto;
+        margin:10px 10px 0px 0px;
+    }
+    .productDetail{
+        margin-top: 20px;
+        /* padding: 6px 15px; */
+    }
+    .detailType{
+        color: #333!important;
+        display: inline-block;
+        width: 100px;
+        text-align: center;
+        list-style: none;
+        height: 40px;
+        line-height: 40px;
+        border-right: 1px solid #eee;
+    }
+    .activeDetailType{
+        background: #f2f2f2;
+        color: green!important;
+    }
+    .detailType:hover{
+        color: green!important;
+    }
+    .detailContent{
+        border: 1px solid #eee;
+        width: 100%;
+        height: auto;
+        padding: 10px;
+
+    }
+    #yewufanwei,#anlijieshao{
+        width: 100%;
+        height: auto;
+    }
+    #anlijieshao{
+        margin-top: 50px;
+    }
+    #yewufanwei .myTitle,#anlijieshao .myTitle{
+        height: 40px;
+        line-height: 40px;
+        color: #000;
+        font-weight: 700;
+        font-size: 18px;
+    }
+    .rectangle{
+        display: inline-block;
+        width: 8px;
+        height: 8px;
+        box-sizing: border-box;
+        border: 8px solid transparent;
+        border-left: 8px solid green;
+        margin-top: 2px;
+        margin-right: 15px;
+    }
+    #yewufanwei li,#anlijieshao li{
+        list-style: none;
+        height: 36px;
+        line-height: 36px;
+    }
+    .anliItem{
+        margin-bottom: 20px;
+    }
+    .leftAnliContent{
+        width: 90%;
+        margin: auto;
+        box-sizing: border-box;
+    }
+
+    .rightAnliContent{
+        width: 90%;
+        box-sizing: border-box;
+        line-height: 24px;
+    }
+    .rightAnliContent .xmTitle{
+        color: #999;
+    }
+    .titleNr{
+        color: #333;
+        font-weight: 700;
+    }
+    .hxyyd{
+        margin-top: 20px;
     }
 }
