--- a/product.css
+++ b/product.css
@@ -52,6 +52,16 @@
         margin:auto;
         margin:10px 10px 0px 0px;
     }
+    .xgtPic{
+        clear: both;
+    }
+    .xgtPic img{
+        width: 30%;
+        max-height: 200px;
+        display: inline-block;
+        margin:auto;
+        margin:10px 5px 0px 0px;
+    }
     .productDetail{
         margin-top: 20px;
         /* padding: 6px 15px; */
