--- a/index.css
+++ b/index.css
@@ -279,6 +279,7 @@
 		width: 140px;
 		height: auto;
 	}
+
 }
 
 @media (max-width: 768px){
@@ -521,4 +522,67 @@
 		width: 140px;
 		height: auto;
 	}
+}
+.contactBox{
+	width:400px;
+	height:210px;
+	background: rgb(13, 120, 243);
+	z-index:9999;
+	position: fixed;
+	top:160px;
+	right:calc((100vw - 400px)/2);
+	box-shadow: 0 0px 4px #ccc;
+	border-radius: 2px;
+}
+.header{
+	width:100%;
+	position: relative;
+	height: 40px;
+	line-height: 40px;
+	border-bottom: 1px solid #dedede;
+	text-indent: 1em;
+	color: #fff;
+}
+.closeBox {
+	position: absolute;
+	top: 2px;
+	right: 10px;
+	font-size: 18px;
+	color: #fff;
+	cursor: pointer;
+}
+.callBox{
+	width: 100%;
+	height: 160px;
+	padding:10px;
+	box-sizing: border-box;
+}
+.callBox .callWx,.callBox .callPhone{
+	display: inline-block;
+	vertical-align: middle;
+}
+.callPhone{
+	width:220px;
+	text-align: left;
+	padding-left: 10px;
+	color: #fff;
+
+}
+.callBox .callWx img{
+	width: 150px;
+	height: 150px;
+}
+.openpopup{
+	position: fixed;
+	top:40%;
+	right:0px;
+	width: 32px;
+	padding: 6px;
+	height: 100px;
+	text-align: center;
+	border: 1px solid rgb(13, 120, 243);
+	background: rgb(13, 120, 243);
+	color: #fff;
+	border-radius: 2px;
+	cursor: pointer;
 }
